--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,4 +16,33 @@
 </p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', posts_path %><br><br>
+
+
+<% if @post.comments.count > 0 %>
+<h2>コメント</h2>
+<% @post.comments.each do |comment| %>
+  <p>
+    <%= comment.commenter %>: <%= comment.body %>
+    <%= link_to '編集', edit_post_comment_path(@post, comment) %>
+    <%= link_to '削除', [comment.post, comment],
+               method: :delete,
+               data: { confirm: "本当に削除しますか？" } %>
+  </p>
+<% end %>
+<% end %>
+
+<h2>コメントを書く</h2>
+<%= form_for([@post, @post.comments.build]) do |f| %>
+  <div class="field">
+    <%= f.label :名前 %>
+    <%= f.text_field :commenter %>
+  </div>
+  <div class="field">
+    <%= f.label :コメント %>
+    <%= f.text_area :body %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
