--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,9 +8,9 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Title</th>
-      <th>Content</th>
+      <th><%= t('header.name') %></th>
+      <th><%= t('header.title') %></th>
+      <th><%= t('header.content') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
