--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,17 +1,17 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong><%= t('header.name') %>:</strong>
   <%= @post.name %>
 </p>
 
 <p>
-  <strong>Title:</strong>
+  <strong><%= t('header.title') %>:</strong>
   <%= @post.title %>
 </p>
 
 <p>
-  <strong>Content:</strong>
+  <strong><%= t('header.content') %>:</strong>
   <%= @post.content %>
 </p>
 
@@ -24,7 +24,7 @@
 <% @post.comments.each do |comment| %>
   <p>
     <%= comment.commenter %>: <%= comment.body %>
-    <%= link_to '編集', edit_post_comment_path(@post, comment) %>
+    <%= link_to '編集', edit_post_comment_path(comment.post, comment) %>
     <%= link_to '削除', [comment.post, comment],
                method: :delete,
                data: { confirm: "本当に削除しますか？" } %>
@@ -34,12 +34,13 @@
 
 <h2>コメントを書く</h2>
 <%= form_for([@post, @post.comments.build]) do |f| %>
+
   <div class="field">
-    <%= f.label :名前 %>
+  <%= t('comment.name') %><br>
     <%= f.text_field :commenter %>
   </div>
   <div class="field">
-    <%= f.label :コメント %>
+  <%= t('comment.comment') %><br>
     <%= f.text_area :body %>
   </div>
   <div class="actions">
