--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -4,5 +4,16 @@
 
 table {
     border: 1px
-    
+}
+
+.success {
+    padding-left: 10px;
+    color: green;
+    background-color: RGB(200, 255, 200);
+}
+
+.error {
+    padding-left: 10px;
+    color: red;
+    background-color: RGB(255, 200, 200);
 }
