--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,17 +12,17 @@
   <% end %>
 
   <div class="field">
-    <%= t('header.name') %><br>
+    <%= t('post.name') %><br>
     <%= form.text_field :name %>
   </div>
 
   <div class="field">
-    <%= t('header.title') %><br>
+    <%= t('post.title') %><br>
     <%= form.text_field :title %>
   </div>
 
   <div class="field">
-    <%= t('header.content') %><br>
+    <%= t('post.content') %><br>
     <%= form.text_area :content %>
   </div>
 
